--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,10 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+  margin-top: 20px;
+}
